--- a/server/package.json
+++ b/server/package.json
@@ -5,19 +5,22 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start" : "node ./dist/index.js",
-    "server":"nodemon ./dist/index.js",
-    "watch":"tsc -w",
-    "build":"tsc"
-
+    "start": "node ./dist/index.js",
+    "server": "nodemon ./dist/index.js",
+    "watch": "tsc -w",
+    "dev": "concurrently \"npm run watch\" \"npm run server\"",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.19.1",
+    "concurrently": "^9.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "prisma": "^5.19.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
